--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
-E11/data/
+data/
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTQzMjUyNjY0MywxNDA5NDU3ODI3XX0=
+eyJoaXN0b3J5IjpbMTQwOTQ1NzgyNywtNDMyNTI2NjQzLDE0MD
+k0NTc4MjddfQ==
 -->
